# eval-banana

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/eval-banana/: SKILL.md
.claude/skills/eval-banana/references/: config.md  examples.md
.claude/skills/skill-creator/scripts/: init_skill.py
.codex/skills/eval-banana/: SKILL.md
.codex/skills/eval-banana/references/: yaml-schema.md
.codex/skills/skill-creator/scripts/: package_skill.py  quick_validate.py
.github/workflows/: ci.yml  release.yml
docs/: check-format.md  configuration.md
orchestra/: CLAUDE.md
skills/eval-banana/: SKILL.md
skills/eval-banana/references/: config.md  examples.md
skills/gemini_media_use/: SKILL.md
skills/gemini_media_use/references/: supported_formats.md
skills/gemini_media_use/scripts/: analyze_media.py  upload_media.py
src/eval_banana/: __main__.py  auth.py  cli.py  config.py  discovery.py  loader.py  models.py  reporter.py  runner.py  scorer.py
src/eval_banana/harness/: registry.py  runner.py  skills.py  template.py
src/eval_banana/runners/: deterministic.py  harness_judge.py  llm_judge.py  task_based.py
src/eval_banana/skills/: README.md
src/eval_banana/skills/eval-banana/: SKILL.md
src/eval_banana/skills/eval-banana/references/: config.md  examples.md  yaml-schema.md
src/eval_banana/skills/gemini_media_use/: SKILL.md
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_deterministic.py  test_discovery.py  test_docs.py  test_gemini_media_scripts.py  test_harness_judge.py  test_harness_registry.py  test_harness_runner.py  test_harness_skills.py  test_harness_template.py  test_llm_judge.py  test_loader.py  test_models.py  test_packaging.py  test_reporter.py  test_runner.py  test_scorer.py  test_task_based.py
